<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">atm-simulator</string>

    <string name="pin_submit">Submit</string>

    <!--PIN BUTTON LABELS-->
    <string name="pin0">0</string>
    <string name="pin1">1</string>
    <string name="pin2">2</string>
    <string name="pin3">3</string>
    <string name="pin4">4</string>
    <string name="pin5">5</string>
    <string name="pin6">6</string>
    <string name="pin7">7</string>
    <string name="pin8">8</string>
    <string name="pin9">9</string>
    <string name="pinPlaceholder">_</string>
    <string name="appName">PocketATM</string>
    <string name="blueWave">blue wave</string>
    <string name="appSlogan">Keep payments in your pockets.</string>
    <string name="pinFingerprintHint">Login with Fingerprint</string>
    <string name="pinBackspaceHint">Backspace</string>

    <!--PIN SUBMIT MESSAGES-->
    <string name="pinSubmitSuccess">Welcome to BankPro!</string>
    <string name="pinSubmitFailure">Incorrect PIN. Please try again.</string>
    <string name="pinSubmitTimeout">PIN submission timed out. Exiting app.</string>

    <!--DASHBOARD-->
    <string name="currencyLabel">PHP</string>
    <string name="currentBalance">CURRENT BALANCE</string>
    <string name="addBalance">Transfer money to your account.</string>
    <string name="moneyTransferLabel">TRANSFER</string>
    <string name="moneyWithdrawLabel">WITHDRAW</string>
    <string name="notificationsLabel">NOTIFICATIONS</string>
    <string name="moneyDepositLabel">DEPOSIT</string>

    <string name="notificationDescription">View your most recent transaction here.</string>
    <string name="notificationNoContent">No transactions found for this account.</string>

    <!--TRANSACTIONS-->
    <string name="quickDepositLabel">QUICK DEPOSIT</string>
    <string name="quickTransferLabel">QUICK TRANSFER</string>
    <string name="quickWithdrawLabel">QUICK WITHDRAW</string>
    <string name="quickDeposit1">100.0</string>
    <string name="quickDeposit3">500.0</string>
    <string name="quickDeposit5">2500.0</string>
    <string name="quickDeposit2">250.0</string>
    <string name="quickDeposit4">1000.0</string>
    <string name="quickDeposit6">5000.0</string>
    <string name="transactionAmountPlaceholder">0.0</string>
    <string name="transactionCancel" tools:ignore="ButtonCase">CANCEL</string>
    <string name="transactionSubmit">SUBMIT</string>
    <string name="receiptInitialBalance">Initial Balance:</string>
    <string name="receiptTransactionAmount">Transaction Amount:</string>
    <string name="transactionNewBalance">New Balance:</string>
    <string name="REGISTER">REGISTER</string>
    <string name="email_address">Email address</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="register_note">This project was developed in fulfillment of the\nfinal requirements for CS320 (Advanced\nAndroid App Development) subject. Any data\nyou give us will be erased from our database\nafter conclusion of Term 2, S.Y. 2023–2024.</string>
    <string name="next">NEXT</string>
    <string name="don_t_have_an_account_yet_register_below">Don\'t have an account yet? Register below!</string>
    <string name="pin_note">Enter your PIN code. Make sure you can remember it before confirming!</string>
    <string name="phone_number">Phone number</string>
    <string name="pinConfirm">CONFIRM</string>
    <string name="hero_image">hero image</string>
    <string name="developer">Frances Pia Alexy Rey © 2024</string>
    <string name="login">LOGIN</string>
    <string name="registerCancelHint">Cancel registration</string>

</resources>
